src/rxt/grammar/parser.go.output
Nonterminals useless in grammar

   strlst
   mlabels


Terminals unused in grammar

   BIE
   CTX
   DESCRIPTION
   LABELS


Rules useless in grammar

   47 strlst: STR_LITERAL
   48       | strlst COMMA STR_LITERAL

   49 mlabels: LABELS strlst


State 71 conflicts: 1 shift/reduce


Grammar

    0 $accept: dataset $end

    1 defverb: DEFINE_AUTH

    2 srcverb: GET
    3        | POST

    4 mtvalue: GAUGE
    5        | COUNTER
    6        | HISTOGRAM
    7        | SUMMARY

    8 id: IDENTIFIER

    9 setcls: SET STR_LITERAL TO STR_LITERAL

   10 optsblk: setcls

   11 idlst: id
   12      | idlst COMMA id

   13 mname: NAME STR_LITERAL

   14 mtype: TYPE mtvalue

   15 mhelp: HELP STR_LITERAL

   16 mhelpo: %empty
   17       | EOL mhelp

   18 mlablso: %empty

   19 optblkl: %empty
   20        | EOL optsblk

   21 optblkr: %empty
   22        | optsblk EOL

   23 metsec: METRIC BLK mname EOL mtype mhelpo mlablso optblkl EOB

   24 metblk: metsec
   25       | metblk EOL metsec

   26 extblk: EXTRACT_USING STR_LITERAL BLK optblkr metblk EOB

   27 ssec: extblk
   28     | ssec EOL extblk

   29 srcsecsufixo: %empty
   30             | srcsecsufix

   31 srcsecsufix: BLK optblkr ssec EOB

   32 srcsec: srcverb IDENTIFIER FROM RESOURCE_PATH srcsecsufixo

   33 defsec: defverb IDENTIFIER AS STR_LITERAL

   34 srvstk: FOR_STACK idlst

   35 srvstko: %empty
   36        | srvstk EOL

   37 srvcls: FOR_SERVICE idlst

   38 srvclso: %empty
   39        | srvcls EOL

   40 mainsec: defsec
   41        | srcsec

   42 mainblk: mainsec
   43        | mainblk EOL mainsec

   44 eolo: %empty
   45     | EOL

   46 dataset: eolo DATASET BLK srvclso srvstko optblkr mainblk


Terminals, with rules where they appear

$end (0) 0
error (256)
COUNTER <key> (258) 5
GAUGE <key> (259) 4
HISTOGRAM <key> (260) 6
SUMMARY <key> (261) 7
COMMA <strval> (262) 12
STR_LITERAL <strval> (263) 9 13 15 26 33
AS (264) 33
BIE (265)
BLK (266) 23 26 31 46
EOB (267) 23 26 31
EOL (268) 17 20 22 23 25 28 36 39 43 45
CTX (269)
DATASET (270) 46
DEFINE_AUTH (271) 1
DESCRIPTION (272)
EXTRACT_USING (273) 26
FOR_SERVICE (274) 37
FOR_STACK (275) 34
FROM (276) 32
HELP (277) 15
GET <key> (278) 2
IDENTIFIER <strval> (279) 8 32 33
LABELS (280)
METRIC (281) 23
NAME (282) 13
POST <key> (283) 3
RESOURCE_PATH (284) 32
SET (285) 9
TO (286) 9
TYPE (287) 14


Nonterminals, with rules where they appear

$accept (33)
    on left: 0
defverb <key> (34)
    on left: 1, on right: 33
srcverb <key> (35)
    on left: 2 3, on right: 32
mtvalue <key> (36)
    on left: 4 5 6 7, on right: 14
id <strval> (37)
    on left: 8, on right: 11 12
setcls <pair> (38)
    on left: 9, on right: 10
optsblk <options> (39)
    on left: 10, on right: 20 22
idlst <strlist> (40)
    on left: 11 12, on right: 12 34 37
mname <strval> (41)
    on left: 13, on right: 23
mtype <strval> (42)
    on left: 14, on right: 23
mhelp <strval> (43)
    on left: 15, on right: 17
mhelpo <strval> (44)
    on left: 16 17, on right: 23
mlablso <strlist> (45)
    on left: 18, on right: 23
optblkl <options> (46)
    on left: 19 20, on right: 23
optblkr <options> (47)
    on left: 21 22, on right: 26 31 46
metsec <metric> (48)
    on left: 23, on right: 24 25
metblk <metrics> (49)
    on left: 24 25, on right: 25 26
extblk <extract> (50)
    on left: 26, on right: 27 28
ssec <exts> (51)
    on left: 27 28, on right: 28 31
srcsecsufixo <exts> (52)
    on left: 29 30, on right: 32
srcsecsufix <exts> (53)
    on left: 31, on right: 30
srcsec <mainsec> (54)
    on left: 32, on right: 41
defsec <mainsec> (55)
    on left: 33, on right: 40
srvstk <strlist> (56)
    on left: 34, on right: 36
srvstko <strlist> (57)
    on left: 35 36, on right: 46
srvcls <strlist> (58)
    on left: 37, on right: 39
srvclso <strlist> (59)
    on left: 38 39, on right: 46
mainsec <mainsec> (60)
    on left: 40 41, on right: 42 43
mainblk <mains> (61)
    on left: 42 43, on right: 43 46
eolo (62)
    on left: 44 45, on right: 46
dataset (63)
    on left: 46, on right: 0


State 0

    0 $accept: . dataset $end

    EOL  shift, and go to state 1

    $default  reduce using rule 44 (eolo)

    eolo     go to state 2
    dataset  go to state 3


State 1

   45 eolo: EOL .

    $default  reduce using rule 45 (eolo)


State 2

   46 dataset: eolo . DATASET BLK srvclso srvstko optblkr mainblk

    DATASET  shift, and go to state 4


State 3

    0 $accept: dataset . $end

    $end  shift, and go to state 5


State 4

   46 dataset: eolo DATASET . BLK srvclso srvstko optblkr mainblk

    BLK  shift, and go to state 6


State 5

    0 $accept: dataset $end .

    $default  accept


State 6

   46 dataset: eolo DATASET BLK . srvclso srvstko optblkr mainblk

    FOR_SERVICE  shift, and go to state 7

    $default  reduce using rule 38 (srvclso)

    srvcls   go to state 8
    srvclso  go to state 9


State 7

   37 srvcls: FOR_SERVICE . idlst

    IDENTIFIER  shift, and go to state 10

    id     go to state 11
    idlst  go to state 12


State 8

   39 srvclso: srvcls . EOL

    EOL  shift, and go to state 13


State 9

   46 dataset: eolo DATASET BLK srvclso . srvstko optblkr mainblk

    FOR_STACK  shift, and go to state 14

    $default  reduce using rule 35 (srvstko)

    srvstk   go to state 15
    srvstko  go to state 16


State 10

    8 id: IDENTIFIER .

    $default  reduce using rule 8 (id)


State 11

   11 idlst: id .

    $default  reduce using rule 11 (idlst)


State 12

   12 idlst: idlst . COMMA id
   37 srvcls: FOR_SERVICE idlst .

    COMMA  shift, and go to state 17

    $default  reduce using rule 37 (srvcls)


State 13

   39 srvclso: srvcls EOL .

    $default  reduce using rule 39 (srvclso)


State 14

   34 srvstk: FOR_STACK . idlst

    IDENTIFIER  shift, and go to state 10

    id     go to state 11
    idlst  go to state 18


State 15

   36 srvstko: srvstk . EOL

    EOL  shift, and go to state 19


State 16

   46 dataset: eolo DATASET BLK srvclso srvstko . optblkr mainblk

    SET  shift, and go to state 20

    $default  reduce using rule 21 (optblkr)

    setcls   go to state 21
    optsblk  go to state 22
    optblkr  go to state 23


State 17

   12 idlst: idlst COMMA . id

    IDENTIFIER  shift, and go to state 10

    id  go to state 24


State 18

   12 idlst: idlst . COMMA id
   34 srvstk: FOR_STACK idlst .

    COMMA  shift, and go to state 17

    $default  reduce using rule 34 (srvstk)


State 19

   36 srvstko: srvstk EOL .

    $default  reduce using rule 36 (srvstko)


State 20

    9 setcls: SET . STR_LITERAL TO STR_LITERAL

    STR_LITERAL  shift, and go to state 25


State 21

   10 optsblk: setcls .

    $default  reduce using rule 10 (optsblk)


State 22

   22 optblkr: optsblk . EOL

    EOL  shift, and go to state 26


State 23

   46 dataset: eolo DATASET BLK srvclso srvstko optblkr . mainblk

    DEFINE_AUTH  shift, and go to state 27
    GET          shift, and go to state 28
    POST         shift, and go to state 29

    defverb  go to state 30
    srcverb  go to state 31
    srcsec   go to state 32
    defsec   go to state 33
    mainsec  go to state 34
    mainblk  go to state 35


State 24

   12 idlst: idlst COMMA id .

    $default  reduce using rule 12 (idlst)


State 25

    9 setcls: SET STR_LITERAL . TO STR_LITERAL

    TO  shift, and go to state 36


State 26

   22 optblkr: optsblk EOL .

    $default  reduce using rule 22 (optblkr)


State 27

    1 defverb: DEFINE_AUTH .

    $default  reduce using rule 1 (defverb)


State 28

    2 srcverb: GET .

    $default  reduce using rule 2 (srcverb)


State 29

    3 srcverb: POST .

    $default  reduce using rule 3 (srcverb)


State 30

   33 defsec: defverb . IDENTIFIER AS STR_LITERAL

    IDENTIFIER  shift, and go to state 37


State 31

   32 srcsec: srcverb . IDENTIFIER FROM RESOURCE_PATH srcsecsufixo

    IDENTIFIER  shift, and go to state 38


State 32

   41 mainsec: srcsec .

    $default  reduce using rule 41 (mainsec)


State 33

   40 mainsec: defsec .

    $default  reduce using rule 40 (mainsec)


State 34

   42 mainblk: mainsec .

    $default  reduce using rule 42 (mainblk)


State 35

   43 mainblk: mainblk . EOL mainsec
   46 dataset: eolo DATASET BLK srvclso srvstko optblkr mainblk .

    EOL  shift, and go to state 39

    $default  reduce using rule 46 (dataset)


State 36

    9 setcls: SET STR_LITERAL TO . STR_LITERAL

    STR_LITERAL  shift, and go to state 40


State 37

   33 defsec: defverb IDENTIFIER . AS STR_LITERAL

    AS  shift, and go to state 41


State 38

   32 srcsec: srcverb IDENTIFIER . FROM RESOURCE_PATH srcsecsufixo

    FROM  shift, and go to state 42


State 39

   43 mainblk: mainblk EOL . mainsec

    DEFINE_AUTH  shift, and go to state 27
    GET          shift, and go to state 28
    POST         shift, and go to state 29

    defverb  go to state 30
    srcverb  go to state 31
    srcsec   go to state 32
    defsec   go to state 33
    mainsec  go to state 43


State 40

    9 setcls: SET STR_LITERAL TO STR_LITERAL .

    $default  reduce using rule 9 (setcls)


State 41

   33 defsec: defverb IDENTIFIER AS . STR_LITERAL

    STR_LITERAL  shift, and go to state 44


State 42

   32 srcsec: srcverb IDENTIFIER FROM . RESOURCE_PATH srcsecsufixo

    RESOURCE_PATH  shift, and go to state 45


State 43

   43 mainblk: mainblk EOL mainsec .

    $default  reduce using rule 43 (mainblk)


State 44

   33 defsec: defverb IDENTIFIER AS STR_LITERAL .

    $default  reduce using rule 33 (defsec)


State 45

   32 srcsec: srcverb IDENTIFIER FROM RESOURCE_PATH . srcsecsufixo

    BLK  shift, and go to state 46

    $default  reduce using rule 29 (srcsecsufixo)

    srcsecsufixo  go to state 47
    srcsecsufix   go to state 48


State 46

   31 srcsecsufix: BLK . optblkr ssec EOB

    SET  shift, and go to state 20

    $default  reduce using rule 21 (optblkr)

    setcls   go to state 21
    optsblk  go to state 22
    optblkr  go to state 49


State 47

   32 srcsec: srcverb IDENTIFIER FROM RESOURCE_PATH srcsecsufixo .

    $default  reduce using rule 32 (srcsec)


State 48

   30 srcsecsufixo: srcsecsufix .

    $default  reduce using rule 30 (srcsecsufixo)


State 49

   31 srcsecsufix: BLK optblkr . ssec EOB

    EXTRACT_USING  shift, and go to state 50

    extblk  go to state 51
    ssec    go to state 52


State 50

   26 extblk: EXTRACT_USING . STR_LITERAL BLK optblkr metblk EOB

    STR_LITERAL  shift, and go to state 53


State 51

   27 ssec: extblk .

    $default  reduce using rule 27 (ssec)


State 52

   28 ssec: ssec . EOL extblk
   31 srcsecsufix: BLK optblkr ssec . EOB

    EOB  shift, and go to state 54
    EOL  shift, and go to state 55


State 53

   26 extblk: EXTRACT_USING STR_LITERAL . BLK optblkr metblk EOB

    BLK  shift, and go to state 56


State 54

   31 srcsecsufix: BLK optblkr ssec EOB .

    $default  reduce using rule 31 (srcsecsufix)


State 55

   28 ssec: ssec EOL . extblk

    EXTRACT_USING  shift, and go to state 50

    extblk  go to state 57


State 56

   26 extblk: EXTRACT_USING STR_LITERAL BLK . optblkr metblk EOB

    SET  shift, and go to state 20

    $default  reduce using rule 21 (optblkr)

    setcls   go to state 21
    optsblk  go to state 22
    optblkr  go to state 58


State 57

   28 ssec: ssec EOL extblk .

    $default  reduce using rule 28 (ssec)


State 58

   26 extblk: EXTRACT_USING STR_LITERAL BLK optblkr . metblk EOB

    METRIC  shift, and go to state 59

    metsec  go to state 60
    metblk  go to state 61


State 59

   23 metsec: METRIC . BLK mname EOL mtype mhelpo mlablso optblkl EOB

    BLK  shift, and go to state 62


State 60

   24 metblk: metsec .

    $default  reduce using rule 24 (metblk)


State 61

   25 metblk: metblk . EOL metsec
   26 extblk: EXTRACT_USING STR_LITERAL BLK optblkr metblk . EOB

    EOB  shift, and go to state 63
    EOL  shift, and go to state 64


State 62

   23 metsec: METRIC BLK . mname EOL mtype mhelpo mlablso optblkl EOB

    NAME  shift, and go to state 65

    mname  go to state 66


State 63

   26 extblk: EXTRACT_USING STR_LITERAL BLK optblkr metblk EOB .

    $default  reduce using rule 26 (extblk)


State 64

   25 metblk: metblk EOL . metsec

    METRIC  shift, and go to state 59

    metsec  go to state 67


State 65

   13 mname: NAME . STR_LITERAL

    STR_LITERAL  shift, and go to state 68


State 66

   23 metsec: METRIC BLK mname . EOL mtype mhelpo mlablso optblkl EOB

    EOL  shift, and go to state 69


State 67

   25 metblk: metblk EOL metsec .

    $default  reduce using rule 25 (metblk)


State 68

   13 mname: NAME STR_LITERAL .

    $default  reduce using rule 13 (mname)


State 69

   23 metsec: METRIC BLK mname EOL . mtype mhelpo mlablso optblkl EOB

    TYPE  shift, and go to state 70

    mtype  go to state 71


State 70

   14 mtype: TYPE . mtvalue

    COUNTER    shift, and go to state 72
    GAUGE      shift, and go to state 73
    HISTOGRAM  shift, and go to state 74
    SUMMARY    shift, and go to state 75

    mtvalue  go to state 76


State 71

   23 metsec: METRIC BLK mname EOL mtype . mhelpo mlablso optblkl EOB

    EOL  shift, and go to state 77

    EOL       [reduce using rule 16 (mhelpo)]
    $default  reduce using rule 16 (mhelpo)

    mhelpo  go to state 78


State 72

    5 mtvalue: COUNTER .

    $default  reduce using rule 5 (mtvalue)


State 73

    4 mtvalue: GAUGE .

    $default  reduce using rule 4 (mtvalue)


State 74

    6 mtvalue: HISTOGRAM .

    $default  reduce using rule 6 (mtvalue)


State 75

    7 mtvalue: SUMMARY .

    $default  reduce using rule 7 (mtvalue)


State 76

   14 mtype: TYPE mtvalue .

    $default  reduce using rule 14 (mtype)


State 77

   17 mhelpo: EOL . mhelp

    HELP  shift, and go to state 79

    mhelp  go to state 80


State 78

   23 metsec: METRIC BLK mname EOL mtype mhelpo . mlablso optblkl EOB

    $default  reduce using rule 18 (mlablso)

    mlablso  go to state 81


State 79

   15 mhelp: HELP . STR_LITERAL

    STR_LITERAL  shift, and go to state 82


State 80

   17 mhelpo: EOL mhelp .

    $default  reduce using rule 17 (mhelpo)


State 81

   23 metsec: METRIC BLK mname EOL mtype mhelpo mlablso . optblkl EOB

    EOL  shift, and go to state 83

    $default  reduce using rule 19 (optblkl)

    optblkl  go to state 84


State 82

   15 mhelp: HELP STR_LITERAL .

    $default  reduce using rule 15 (mhelp)


State 83

   20 optblkl: EOL . optsblk

    SET  shift, and go to state 20

    setcls   go to state 21
    optsblk  go to state 85


State 84

   23 metsec: METRIC BLK mname EOL mtype mhelpo mlablso optblkl . EOB

    EOB  shift, and go to state 86


State 85

   20 optblkl: EOL optsblk .

    $default  reduce using rule 20 (optblkl)


State 86

   23 metsec: METRIC BLK mname EOL mtype mhelpo mlablso optblkl EOB .

    $default  reduce using rule 23 (metsec)
